[package]
name = "astra-core"
version = "0.1.0"
authors = ["rustmain <mail@rustmain.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
godot = ["astra-model/godot", "astra-wrapper/godot"]

[dependencies]
astra-wrapper = { path = "../astra-wrapper" }
astra-model = { path = "../astra-model" }