[package]
name = "astra-model"
version = "0.1.0"
authors = ["rustmain <mail@rustmain.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
astra-sys = { path = "../astra-sys" }