[package]
name = "astra-model"
version = "0.1.0"
authors = ["mucks <mail@mucks.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
godot = ["gdnative"]

[dependencies]
astra-sys = { path = "../astra-sys" }
gdnative = { optional = true, git = "https://github.com/GodotNativeTools/godot-rust" }
