[package]
name = "astra-wrapper"
version = "0.1.0"
authors = ["rustmain <mail@rustmain.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astra-sys = { path = "../astra-sys" }
astra-model = { path = "../astra-model" }