[package]
name = "astra-wrapper"
version = "0.1.0"
authors = ["mucks <mail@mucks.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
godot = ["astra-model/godot"]

[dependencies]
astra-sys = { path = "../astra-sys" }
astra-model = { path = "../astra-model" }
