[package]
name = "astra"
version = "0.1.0"
authors = ["rustmain <mail@rustmain.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astra-sys = { path = "../astra-sys" }
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"