[package]
name = "astra"
version = "0.1.0"
authors = ["rustmain <mail@rustmain.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
godot = ["astra-model/godot", "astra-core/godot"]

[dependencies]
astra-core = { path = "../astra-core" }
astra-model = { path = "../astra-model" }
